2002-08-07  Richard Williamson (Home)  <rjw@apple.com>

        Fixed scrollview related drawing turd problems.
        (3000844 and 2896459).
        
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView drawRect:]):
        * WebView.subproj/WebView.m:
        (-[WebView setFrame:]):

2002-08-07  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebFrame.m: (-[WebFrame setProvisionalDataSource:]):
        * WebView.subproj/WebFramePrivate.m: (-[WebFrame _goToItem:withFrameLoadType:]):
	Call _web_URLWithoutFragment by its new name _web_URLByRemovingFragment.

2002-08-07  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3018632 - the show javascript files inline bug

        * WebView.subproj/WebDataSourcePrivate.m:
        (+[WebDataSource _repTypes]): support application/x-javascript
        * WebView.subproj/WebViewPrivate.m:
        (+[WebView _viewTypes]): support application/x-javascript

2002-08-07  John Sullivan  <sullivan@apple.com>

        * Misc.subproj/WebNSViewExtras.h:
        * Misc.subproj/WebNSViewExtras.m:
        (-[NSView _web_superviewOfClass:]): Changed name from
	_web_superviewWithName: and made it take a Class object
	instead of a string.

        * Plugins.subproj/WebNullPluginView.m:
        (-[WebNullPluginView drawRect:]):
        * Plugins.subproj/WebPluginView.m:
        (-[WebPluginView start]):
        (-[WebPluginView layout]):
	Updated callers of _web_superviewWithName:

        * WebKit.pbproj/project.pbxproj: Changed WebNSViewExtras.h from
	Public to Private

2002-08-06  Darin Adler  <darin@apple.com>

	Fix assert I saw while fixing bug 2965321.

        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _receivedError:forResourceHandle:partialProgress:fromDataSource:]):
	Create a suitable resource identifier from the failing URL in the WebError for cases
	where we fail before we are able to construct a resource handle.

2002-08-06  Darin Adler  <darin@apple.com>
