@@ -1,3 +1,10 @@
+2002-08-07  John Sullivan  <sullivan@apple.com>
+
+	- fixed 3017245 -- Shift-Delete should go forward
+
+        * WebView.subproj/WebView.m:
+        (-[WebView keyDown:]): Check for shift-delete.
+
 2002-08-07  Richard Williamson (Home)  <rjw@apple.com>
 
         Fixed scrollview related drawing turd problems.
